swagger file update for resetpass
