# src/routes/auth.routes.ts
@@ -4,6 +4,8 @@ import { registerUser } from "../controllers/auth/register";
 import { sendOTP } from "../controllers/verification/sendOtp.controller";
 import { checkOtp } from "../controllers/verification/checkOtp.controller";
 import { verifyEmail } from "../controllers/auth/verifyRegisterEmail";
+import { resetPasswordWithOtp } from "../controllers/auth/resetPassword";
+
 
 import {
   startGoogleOauth,
@@ -22,6 +24,7 @@ router.post("/sendOtp/:purpose", sendOTP);
 router.post("/verifyEmail", verifyEmail);
 router.post("/verifyOtp", checkOtp);
 
+router.post("/reset-password", resetPasswordWithOtp);
 
 router.get("/google", startGoogleOauth);
 router.get("/google/callback", googleOauthCallback);
